check_err.log
    Checking synoid-core v0.1.0 (D:\SYNOID)
warning: unused import: `error`
  --> src\agent\super_engine.rs:11:15
   |
11 | use tracing::{error, info, warn};
   |               ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Arc`
 --> src\state.rs:1:17
  |
1 | use std::sync::{Arc, Mutex};
  |                 ^^^

warning: variable does not need to be mutable
   --> src\agent\super_engine.rs:161:22
    |
161 |                  let mut cortex = MotorCortex::new("http://localhost:11434/v1");
    |                      ----^^^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `state` in initializer of `SynoidApp`
   --> src\window.rs:112:9
    |
112 |         Self {
    |         ^^^^ missing `state`

error[E0599]: no method named `clone` found for struct `std::sync::Mutex<T>` in the current scope
   --> src\window.rs:140:30
    |
140 |             task: state.task.clone(),
    |                              ^^^^^ method not found in `std::sync::Mutex<TaskState>`

warning: unused variable: `output_path`
   --> src\agent\super_engine.rs:134:21
    |
134 |                 let output_path = self.work_dir.join("speech_output.wav");
    |                     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_path`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `cortex`
   --> src\agent\super_engine.rs:161:22
    |
161 |                  let mut cortex = MotorCortex::new("http://localhost:11434/v1");
    |                      ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_cortex`

warning: unused variable: `input_path`
   --> src\agent\super_engine.rs:162:22
    |
162 |                  let input_path = std::path::Path::new(&input);
    |                      ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_input_path`

warning: unused variable: `output_path`
   --> src\agent\super_engine.rs:163:22
    |
163 |                  let output_path = std::path::Path::new("output.mp4"); // simplified for now
    |                      ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_path`

Some errors have detailed explanations: E0063, E0599.
For more information about an error, try `rustc --explain E0063`.
warning: `synoid-core` (lib) generated 7 warnings
error: could not compile `synoid-core` (lib) due to 2 previous errors; 7 warnings emitted
